# supermarket-offer-scanner

./: .editorconfig  Dockerfile  README.md  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  run-poetry-update.sh
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: dependabot.yml
.github/linters/: .hadolint.yaml
.github/workflows/: docker-image.yml  githubnext-create-diagram.yml  keep-github-actions-alive.yml  linter-docker.yml  linter-github-action.yml  linter-markdwonlint.yml  linter-shell.yml  linter-yaml.yml  python_linters.yml  reformat-code.yml  run-tests.yml  secret-scanner.yml  update-requirements-txt.yml
Docker/docker-cron/: Dockerfile  build-and-run-docker-compose.sh  crontab-sample.txt  docker-compose.yml
Docker/docker-cron/root/defaults/: crontab.txt
Docker/docker-cron/root/etc/s6-overlay/s6-rc.d/init-cron-config/: run
Docker/docker-cron/root/etc/s6-overlay/s6-rc.d/svc-cron/: run
Docker/docker-one-shot/: Dockerfile  build-and-run-and-remove-docker.sh
source/: PdfPatternMatching.py  Pushover.py  main.py
source/PromotionLeafletPdfScraper/: AldiNordPdfScraper.py  HitPdfScraper.py  LidlPdfScraper.py  NettoPdfScraper.py  PdfScraper.py
supermarket_offer_scanner/: ActionProspectusPdfScraper.py  PdfPatternMatching.py  Pushover.py  main.py
supermarket_offer_scanner/PromotionLeafletPdfScraper/: AldiNordPdfScraper.py  LidlPdfScraper.py  PdfScraper.py
tests/: test_PdfPatternMatching.py  test_main.py
tests/resources/: generate-sample-pdf.sh  sample.md
