[tool.poetry]
name = "supermarket-offer-scanner"
version = "0.1.0"
description = ""
authors = ["Florian Kretschmer <entepotenz@gmail.com>"]
readme = "README.md"
packages = [{ include = "source" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
selenium = "4.17.2"
typer = "0.12.3"
pypdf = "6.4.0"

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
pyhamcrest = "2.1.0"
ruff = "0.14.2"
yapf = "0.43.0"
mypy = "1.18.2"
flake8 = "7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
