[tool.poetry]
name = "supermarket-offer-scanner"
version = "0.1.0"
description = ""
authors = ["Florian Kretschmer <entepotenz@gmail.com>"]
readme = "README.md"
packages = [{ include = "source" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
selenium = "4.39.0"
typer = "0.21.0"
pypdf = "6.5.0"

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
pyhamcrest = "2.1.0"
ruff = "0.14.9"
yapf = "0.43.0"
mypy = "1.19.1"
flake8 = "7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
