[tool.poetry]
name = "supermarket-offer-scanner"
version = "0.1.0"
description = ""
authors = ["Florian Kretschmer <entepotenz@gmail.com>"]
readme = "README.md"
packages = [{ include = "source" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
selenium = "4.44.0"
typer = "0.26.1"
pypdf = "6.6.0"

[tool.poetry.group.dev.dependencies]
black = "26.5.0"
pyhamcrest = "2.1.0"
ruff = "0.15.13"
yapf = "0.43.0"
mypy = "1.20.2"
flake8 = "7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# https://cooldowns.dev/#poetry
[solver]
min-release-age = 3
